2001-06-29  Arturo Espinosa Aldama  <arturo@ximian.com>

	* xml.pl.in (xst_xml_read_stdin): Like, a precedence bug.

	* users-conf.in (xml_parse): Use standard xst_xml_scan.
	This bug comes since the no-shared-code days! It slipped!
	(xml_scan): This should have been removed ages ago.

2001-06-29  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_config_set): Give up if something is wrong.
	Remove Modelines from $sections list.

	* display-conf.in (xml_parse): Write conf when asked to.
	Bad bad typo!

	* x.pl.in (x_update_section): Now we can write XF86Config files too.

2001-06-27  Tambet Ingo  <tambet@ximian.com>

	* util.pl.in (xst_ignore_line): Allow spaces before comments at
	the start of a line.

2001-06-29  Hans Petter Jansson  <hpj@ximian.com>

	This implements printer settings replacement and makes more code
	shared between parsing and replacement functions.

	* parse.pl.in (xst_parse_printcap_buffer_load): Insert.
	  (xst_parse_printcap_get_next_stanza): Insert.
	  (xst_parse_printcap_get_next_option): Insert.
	  (xst_parse_printcap_parse_stanza): Insert.
	  (xst_parse_printcap_parse_option): Insert.
	  (xst_parse_printcap_find_stanza): Insert.
	  (xst_parse_printcap_find_option): Insert.
	  (xst_parse_printcap): Implement.
	  (xst_parse_printcap_bool): Implement.

	* replace.pl.in (xst_replace_printcap_buffer_load): Remove.
	  (xst_replace_printcap_get_next_stanza): Remove.
	  (xst_replace_printcap_get_next_option): Remove.
	  (xst_replace_printcap_parse_stanza): Remove.
	  (xst_replace_printcap_parse_option): Remove.
	  (xst_replace_printcap_find_stanza): Remove.
	  (xst_replace_printcap_find_option): Remove.
	  (xst_replace_printcap_add_stanza): Use xst_parse_printcap_*() funcs.
	  (xst_replace_printcap): Use xst_parse_printcap_*() funcs.

	* print.pl.in (xst_print_conf_get): Remove stray variable.
	  (xst_print_conf_set): Implement.
	  (xst_print_get_printer_parse_table): Use xst_parse_printcap(), not
	  generic xst_parse_cap().